# pommet

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
docs/: README_EN.md
src/: main.rs
src/config/: config.inc.php  httpd.conf  my.ini  php.ini
src/core/: mod.rs
src/plugins/: apache.rs  mariadb.rs  mod.rs  msql.rs  php.rs  phpmyadmin.rs  utils.rs
src/tui/: app.rs  dashboard.rs  mod.rs
src/tui/handlers/: focushandler.rs  mod.rs
src/tui/widgets/: cpanel.rs  header.rs  helptext.rs  leftpanel.rs  logprinter.rs  mod.rs  rightpanel.rs
